--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,15 @@ body{
             margin-top: 10px;
             margin-right: 30px;
           }
+          .card1, .card2, .card3{
+            margin-bottom: 30px;
+          }
+          
+          .card2{
+            margin-left: 3rem;
+            margin-right: -3rem;
+          }
+          .card3{
+            margin-left: 6rem;
+            margin-right: -6rem;
+          }
