--- a/styles.css
+++ b/styles.css
@@ -187,4 +187,7 @@ body{
             padding: 2rem;
             border-radius: 0.5rem;
           }
-          
+          .customer2{
+            margin-top: 2rem;
+            margin-bottom: -1rem;
+          }
