--- a/styles.css
+++ b/styles.css
@@ -191,3 +191,7 @@ body{
             margin-top: 2rem;
             margin-bottom: -1rem;
           }
+          .customer3{
+            margin-top: 4rem;
+            margin-bottom: -3rem;
+          }
