--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,11 @@ body{
             margin-top: 4rem;
             margin-bottom: -3rem;
           }
+          .testimonials img{
+            display: flex;
+            width: auto;
+            height: 50px;
+            border-radius: 50%;
+            border: 5px solid hsl(303, 10%, 53%);
+          }
+          
